# AppleDocParser

./: .gitignore  LICENSE  OrgDevice.json  README.md  SchemaTemplate.json  pyproject.toml  schemer.py
asm/schema/: ErrorLinks.json  MdmServer.json  UnknownSchema.json
