[project]
name = "appledocparser"
version = "0.1.0"
description = "simple python script for parsing the information for https://github.com/micromdm/apple-device-services"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.13.5",
    "requests>=2.32.5",
    "selenium>=4.35.0",
]
